k8s/kustomize/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-platform
    environment: beta
