k8s/kustomize/base/dhcp-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dhcp-server
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dhcp-server
    app.kubernetes.io/instance: dhcp-server
spec:
  type: ClusterIP
  ports:
  - name: dhcp-http
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dhcp-server
    app.kubernetes.io/instance: dhcp-server
