k8s/kustomize/base/dns-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-client
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-client
    app.kubernetes.io/instance: dns-client
spec:
  type: ClusterIP
  ports:
  - name: dns-udp
    port: 53
    targetPort: 5300
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 5300
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-client
    app.kubernetes.io/instance: dns-client
