k8s/kustomize/base/dns-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dns-server
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-server
    app.kubernetes.io/instance: dns-server
spec:
  type: ClusterIP
  ports:
  - name: doh
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: dns-server
    app.kubernetes.io/instance: dns-server
