k8s/kustomize/base/k8s-dns-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dns
  namespace: squawk
spec:
  type: ClusterIP
  ports:
  - name: dns-udp
    port: 53
    targetPort: 5300
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 5300
    protocol: TCP
  selector:
    app: k8s-dns
