k8s/kustomize/base/squawk-client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: squawk-client
  namespace: squawk
  labels:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: squawk-client
    app.kubernetes.io/instance: squawk-client
spec:
  type: ClusterIP
  ports:
  - name: dns-udp
    port: 53
    targetPort: 5300
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 5300
    protocol: TCP
  selector:
    app.kubernetes.io/name: squawk
    app.kubernetes.io/component: squawk-client
    app.kubernetes.io/instance: squawk-client
